fixed a minor issue with truncated genres in sidebar cleaned up *cough* a little bit *cough* base css file (remind me not to clean anything like this one).

--- a/themes/greyblock/templates/default.css
+++ b/themes/greyblock/templates/default.css
@@ -187,7 +187,10 @@
 		}
 
 #content { 
-	float: none; 
+	top:90px;
+	float: none;
+	margin-top:7px;
+	margin-left:135px;	
 	background-color: #8B8B8B;
 }
 
